--- a/misc/signpost-demo-docker/config.yml
+++ b/misc/signpost-demo-docker/config.yml
@@ -2,7 +2,7 @@
 SiteHeading: Singpost Demo
 CompanyName: Demo Company
 CompanyDomain: example.com
-CompanyURL: https://example.com
+CompanyUrl: https://example.com
 Rows:
 - Cols:
   - Blocks:
